fix footer overlaps navegation

--- a/index.css
+++ b/index.css
@@ -412,7 +412,7 @@ button:hover {
     min-height: 10vh;
     background-color: var(--p_color);
     padding: 2em 0;
-    z-index: 50;
+    z-index: 15;
 }
 
 .footer h3 {
